# pyfsn

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyfsn_run  pyproject.toml  run_pyfsn.py  src_pyfsn_sitecustomize.py
docs/: ADVANCED_EFFECTS.md  API.md  EFFECTS_IMPLEMENTATION_SUMMARY.md  FEATURE.md  MEDIA_PREVIEW.md  SPEC.md
scripts/: build.py
src/pyfsn/: __init__.py  __main__.py  errors.py  run.py
src/pyfsn/controller/: __init__.py  controller.py  input_handler.py
src/pyfsn/layout/: __init__.py  box.py  engine.py  position.py
src/pyfsn/model/: __init__.py  node.py  scanner.py
src/pyfsn/view/: __init__.py  bloom.py  buffer_manager.py  camera.py  cube_geometry.py  effects_demo.py  filter_panel.py  main_window.py  mini_map.py  modern_renderer.py  performance.py  picking.py  renderer.py  shader_loader.py  shaders.py  sound.py  spotlight.py  texture_manager.py  theme.py  theme_manager.py
src/pyfsn/view/shaders/: cube.frag  cube.vert  emissive.frag  emissive.vert  ground.frag  ground.vert  sky.frag  sky.vert  wire.frag  wire.vert
tests/: test_spotlight.py  test_spotlight_demo.py
